<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.HomeFeatures">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:orientation="vertical"
        android:background="@color/backgroundwheather"
        tools:context=".ui.base.MainActivity">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/image"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:background="@drawable/head_image"/>

            <TextView
                android:id="@+id/good_morning_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/image"
                android:layout_alignTop="@+id/image"
                android:layout_marginStart="40dp"
                android:layout_marginTop="30dp"
                android:text="@string/good_morning"
                android:textColor="@color/home_text_color"
                android:textSize="20sp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/user_name_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/home_text_color"
                android:text="@string/user_name_home"
                android:textStyle="bold"
                android:layout_below="@+id/good_morning_tv"
                android:layout_alignStart="@+id/image"
                android:layout_marginStart="40dp"
                android:textSize="30sp"/>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/user_name_tv"
                app:cardCornerRadius="20dp"
                app:cardBackgroundColor="@color/white"
                android:layout_alignParentEnd="true"
                android:layout_alignParentStart="true"
                android:padding="10dp"
                android:layout_marginEnd="30dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="20dp"
                app:cardElevation="5dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/location_icon"
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:src="@drawable/ic_baseline_location_on_24"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/location"
                            android:textColor="@color/home_text_color"
                            android:textStyle="bold"
                            android:layout_marginStart="2dp"
                            android:textSize="16sp"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/date_txt"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/date"
                                android:textColor="@color/home_text_color"
                                android:textSize="16sp"
                                android:layout_marginTop="10dp"/>

                            <TextView
                                android:id="@+id/temperature_degree_tv"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/temperature_degree"
                                android:textColor="@color/home_text_color"
                                android:layout_marginTop="10dp"
                                android:textSize="40sp"/>

                        </LinearLayout>

                        <ImageView
                            android:id="@+id/temperature_icon"
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            android:src="@drawable/temperatures"
                            android:layout_marginStart="100dp"/>
                    </LinearLayout>
                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </RelativeLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:background="@color/backgroundwheather"

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="60dp" />
    </LinearLayout>


</FrameLayout>